<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:context="com.example.daniel.tictactoe.MainActivity">


    <LinearLayout
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"

        >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="left"
            android:padding="4dp"
            android:src="@drawable/xo_48x48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/actionBarTextSize" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/actionBarLine"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textColor="@color/textColor"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_marginBottom="26dp"
        android:textSize="@dimen/welcomeTextSize"

        />

    <Button
        android:id="@+id/playGamebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/buttonBackground"
        android:gravity="center"
        android:text="@string/playGameText"
        android:textColor="@color/textColor"
        android:onClick="playGame"/>

    <Button
        android:id="@+id/aboutGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        android:gravity="center"
        android:text="@string/aboutGameText"
        android:textColor="@color/textColor"
        android:layout_marginTop="16dp"
        android:onClick="showAboutGame"/>
</LinearLayout>
