<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="left"
            android:padding="4dp"
            android:src="@drawable/xo_48x48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/actionBarTextSize" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/actionBarLine"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutGameText"
        android:textSize="@dimen/welcomeTextSize"
        android:textColor="@color/textColor"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutGameDescription"
        android:textColor="@color/textColor"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/descriptionTextSize"
        android:padding="20dp"
        android:textAlignment="center"/>


</LinearLayout>